# multipart

./: COMPLETE_DEMO_GUIDE.md  DEMO_OUTPUT.txt  EXAMPLE_RESPONSE.md  QUICK_REFERENCE.md  README.md  SYSTEM_PROMPT_GUIDE.md  __init__.py  __main__.py  __main_test__.py  agent.py  agent_executor.py  agent_test_mode.py  demo.py  demo_final.py  demo_test.py  pyproject.toml  run_demo.py  simple_example.py  summary.md  test_agent.py  test_client.py  test_simple.py
